kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: vprodb
   lables:
     app: vprodb
spec:
  replicas:
  selector:
    matchlables:
      app: vprodb
  template:
    metadata:
      lables:
        app: vprodb
    spec:
        containers:
        - name: vprodb
          image: vprocontainers/vprofiledb
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: vpro-db-data
          ports:
          - name: vprodb-port
            containerPort: 3306
        volumes:
          - name: vpro-db-data
            persistentVolumeClaim:
              claimName: db-pv-claim  
        initContainer:
          - name: busybox
            image: busybox:latest
            args: ["rm", "-rf", "/var/lib/mmysql/lost+found"]
            volumeMounts:
              - name: vpro-db-data
                mountPath: /var/lib/mysql
