kubedefs/rmqdeploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: vprormq
  lables:
    app: vprormq
spec:
  selector:
    matchlables:
      app: vprormq
  replicas: 1
  template:
    metadata:
      lables:
        app: vprormq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq
        ports:
        - name: vprormq-port
          containerPort: 5672
