kubedefs/appdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp
  lables:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchlables:
      app: vproapp
  template:
    metadata:
      lables:
        app: vproapp
    spec:
      container:
      - name: vproapp
        image: vprofileconatiners/vproapp
        imagePullPolicy: Always
        ports:
        - name: vproapp-port
          containerPort: 8080
      initContainers:
      - name: init-mydb
        image: busybox
        command: ['sh', '-c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
      - name: init-mydb
        image: busybox
        command: ['sh', '-c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
      - name: init-mydb
        image: busybox
        command: ['sh', '-c', 'until nslookup vpromq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
