kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
  - port: 8080
    targetPrt: 8080
    protocal: TCP
  selector:
    app: vproapp
    type: ClusterIP
