kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  ports:
  - port: 3306
    targetPrt: vprodb-port
    protocal: TCP
  selector:
    app: vprodb
    type: ClusterIP
