kubedefs/mcdep.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromc
  lables:
    app: vpromc
spec:
  replicas: 1
  selector:
    matchlables:
      app: vpromc
  template:
    metadata:
      lables:
        app: vpromc
    spec:
      container:
      - name: vpromc
        image: memchached
        ports:
        - name: vpromc-port
          containerPort: 11211
