kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  ports:
  - port: 11211
    targetport: vpromc-port
    protocal: TCP
  selector:
    app: vpromc
    type: ClusterIP
