kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq-01
spec:
  ports:
  - port: 5672
    targetport: vprormq-port
    protocal: TCP
  selector:
    app: vprormq
    type: ClusterIP
