kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: vproapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassname: nginx
  rules:
  - host: vprofile.sophestica.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
